--- a/struktur.html
+++ b/struktur.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML - CSS</title>
-
+    <style>
+        body {
+            background-color: brown;
+         }
+    </style>
 </head>
 <body>
-    <h1>STRUKTUR HTML & CSS</h1>
+    <h1 style="color :red ; ">STRUKTUR HTML & CSS</h1>
     <header>
         <h1>Header</h1>
     </header>
@@ -25,15 +29,15 @@
         <main class="articles"
             <article>
                 <h2>Article 1</h2>
-                <p>Konten artikel pertama...</p>
+                <p style="color : pink ; ">Konten artikel pertama...</p>
             </article>
             <article>
                 <h2>Article 2</h2>
-                <p>Konten artikel kedua...</p>
+                <p style="color : orchid ; ">Konten artikel kedua...</p>
             </article>
             <article>
                 <h2>Article 3</h2>
-                <p>Konten artikel ketiga...</p>
+                <p style="color : rgb(99, 241, 230) ; ">Konten artikel ketiga...</p>
             </article>
         </main>
     </div>
