--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -22,6 +22,7 @@
         padding: 20px;
         text-align: center;
         margin-bottom: 10px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* font khusus header */
       }
 
       .main-content {
