--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -22,7 +22,7 @@
         padding: 20px;
         text-align: center;
         margin-bottom: 10px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* font khusus header */
+        font-family: Georgia, 'Times New Roman', Times, serif; /* font khusus header */
       }
 
       .main-content {
