--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -6,7 +6,7 @@
         <title>struktur HTML & CSS Flex</title>
         <style>
             body {
-        font-family: sans-serif;
+        font-family: monospace;
         margin: 20px;
       }
 
@@ -22,7 +22,6 @@
         padding: 20px;
         text-align: center;
         margin-bottom: 10px;
-        font-family: Georgia, 'Times New Roman', Times, serif; /* font khusus header */
       }
 
       .main-content {
