--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -72,9 +72,14 @@
       <div class="main-content">
         <nav class="navigation">
           <ul>
+            <div class="navigation">
+          <navigation class="navigation">
             <li>Link 1</li>
             <li>Link 2</li>
             <li>Link 3</li>
+          </navigation>
+          <navigation class="navigation">
+          </navigation>
           </ul>
         </nav>
         <div class="articles">
