--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -34,6 +34,9 @@
         background-color: #e0ffe0;
         padding: 15px;
         width: 200px;
+
+        display: grid;
+        grid-template-rows: 1fr 1fr;
       }
 
       .articles {
