--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -74,12 +74,17 @@
       <header class="header">Struktur HTML & CSS Flex</header>
       <div class="main-content">
         <nav class="navigation">
-            <div class="navigation">
-                <ul>
+            <div>
+             <ul>
                 <li>Link 1</li>
                 <li>Link 2</li>
+            </ul>
+        </div>
+        <div>
+            <ul>
                 <li>Link 3</li>
-                </ul>
+            </ul>
+        </div>
         </nav>
         <div class="articles">
           <article class="article">
