--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -74,13 +74,13 @@
       <header class="header">Struktur HTML & CSS Flex</header>
       <div class="main-content">
         <nav class="navigation">
-            <div>
+            <div class="nav-top">
              <ul>
                 <li>Link 1</li>
                 <li>Link 2</li>
             </ul>
         </div>
-        <div>
+        <div class="nav-bottom">
             <ul>
                 <li>Link 3</li>
             </ul>
