--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -32,10 +32,21 @@
 
       .navigation {
         background-color: #e0ffe0;
-        padding: 15px;
         width: 200px;
-        display: grid;
-        grid-template-rows: 1fr 1fr;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+
+      .nav-atas {
+        background-color: #e0ffe0;
+        padding: 10px;
+      }
+
+      .nav-bawah {
+        background-color: #e0ffe0;
+        padding: 10px;
       }
 
       .articles {
