--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -84,13 +84,13 @@
       <header class="header">Struktur HTML & CSS Flex</header>
       <div class="main-content">
         <nav class="navigation">
-            <div class="nav-top">
+            <div class="nav-atas">
              <ul>
                 <li>Link 1</li>
                 <li>Link 2</li>
             </ul>
         </div>
-        <div class="nav-bottom">
+        <div class="nav-bawah">
             <ul>
                 <li>Link 3</li>
             </ul>
