--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -43,6 +43,7 @@
       .nav-atas {
         background-color: #e0ffe0;
         padding: 10px;
+        margin-bottom: 10px;
       }
 
       .nav-bawah {
