--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -37,7 +37,8 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
-        justify-content: space-between;
+        flex-grow: 1;
+        background-color: #080808;
       }
 
       .nav-atas {
