--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -66,7 +66,8 @@
       }
 
       .footer {
-        background-color: #ffe0e0;
+        background-color: hsl(273, 74%, 47%);
+        border-radius: 10px;
         padding: 15px;
         text-align: center;
       }
