--- a/struktur_flex.html
+++ b/struktur_flex.html
@@ -66,8 +66,8 @@
       }
 
       .footer {
-        background-color: hsl(273, 74%, 47%);
-        border-radius: 10px;
+        background-color: black;
+        border: black 2px solid;
         padding: 15px;
         text-align: center;
       }
